# onidev

./: LICENSE.md  README.md  tuto_en.md  tuto_fr.md
Examples/OniDev/Global Depth/: main.cpp
Examples/OniDev/Inheritance/: main.cpp
Examples/OniDev/Instance Context/: Context.cbp  main.cpp  player.cpp  player.h  world.cpp  world.h
Examples/OniDev/Layers/: main.cpp
Examples/OniDev/Platformer/: Platformer.cbp  main.cpp  player.cpp  player.h  world.cpp  world.h
Examples/OniDev/Predraw/: main.cpp  window.cbp
Examples/OniDev/Simple Collisions/: Collisions.cbp  main.cpp
Examples/OniDev/Simple Game/: main.cpp
Examples/OniDev/Space Partitioning/: Partitionning.cbp  block.cpp  main.cpp  player.cpp
Examples/OniDev/Space Partitionning/: block.h  player.h
Examples/SDL2/Simple Game/: main.cpp  window.cbp
Examples/SDL2/Space Partitioning/: block.cpp  main.cpp  player.cpp
Examples/SFML/Simple Collisions/: main.cpp  (+2 more)
OniDev/: CMakeLists.txt
OniDev/include/onidev/: collision.h  game.h
OniDev/include/onidev/collision/: collision.h  convex_polygon.h  disk.h  grid.h  grid.inc  line.h  mask.h  partitioning.h  polygon.h  rect.h  shape.h  tilemap.h
OniDev/include/onidev/core/: primitives.h
OniDev/include/onidev/game/: container.h  container.inc  context.h  context.inc  create.h  index.h  object2d.h  object2d.inc  room.h
OniDev/include/onidev/math/: vec2.h
OniDev/source/collision/: collision.cpp  convex_polygon.cpp  disk.cpp  line.cpp  mask.cpp  polygon.cpp  rect.cpp  tilemap.cpp
OniDev/source/game/: object2d.cpp  room.cpp
OniDev/source/math/: vec2.cpp
(+8 files in other folders)
